--- a/src/difflicious/static/css/tailwind.css
+++ b/src/difflicious/static/css/tailwind.css
@@ -719,6 +719,10 @@ video {
   min-width: 0px;
 }
 
+.max-w-0 {
+  max-width: 0px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
